--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -22,6 +22,7 @@ $selectbg :rgb(16, 163, 249);
 .bg_title{
     // z-index: 9998; 
        border: solid 1px rgba(1,139,205,.2);
+    //    border-image:linear-gradient(to right,rgba(255, 255, 255, 0),#23b7cb,rgba(255, 255, 255, 0)) 1 5;
     //   box-shadow: 1px 1px 2px 2px rgba(8, 110, 211, 0.521);
     //    padding: 5px;
     //    padding-top:0; 
@@ -48,5 +49,71 @@ $selectbg :rgb(16, 163, 249);
        border-right: 1px solid #00EAFF;
        border-bottom: 1px solid #00EAFF;
        opacity: .8;
+   }
+
+ .bg_boder_box{
+    // z-index: 9998; 
+       border: solid 1px transparent;
+       border-image:linear-gradient(to right,rgba(255, 255, 255, 0),rgba(35, 183, 203, 0.9),rgba(255, 255, 255, 0)) 1 5;
+    //   box-shadow: 1px 1px 2px 2px rgba(8, 110, 211, 0.521);
+    //    padding: 5px;
+    //    padding-top:0; 
+       position:relative;
+   }
+   .bg_boder_box:before{
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 10px;
+      height: 10px;
+      content: "";
+      border-left: 1px solid #00EAFF;
+      border-top: 1px solid #00EAFF;
+      opacity: .8;
+   }
+   .bg_boder_box:after{
+       position: absolute;
+       bottom: 0;
+       right: 0;
+       width: 10px;
+       height: 10px;
+       content: "";
+       border-right: 1px solid #00EAFF;
+       border-bottom: 1px solid #00EAFF;
+       opacity: .8;
+   }
+   .bg_boder_inner_box{
+    border: solid 1px transparent;
+    border-image:linear-gradient(to bottom,rgba(255, 255, 255, 0),rgba(35, 183, 203, 0.9),rgba(255, 255, 255, 0)) 1 5;
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    // background:radial-gradient(rgba(0, 0, 0, 0), rgba(67, 217, 223, 0.25), rgba(67, 217, 223, 0.3));
+    //   background-color: rgba(28, 227, 241, 0.384);
+      background-color: rgba(0, 0, 0, 0.2);
+        &::before{
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 10px;
+            height: 10px;
+            content: "";
+            border-right: 1px solid #00EAFF;
+            border-top: 1px solid #00EAFF;
+            opacity: .8;
+        }
+       &::after{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 10px;
+        height: 10px;
+        content: "";
+        border-left: 1px solid #00EAFF;
+        border-bottom: 1px solid #00EAFF;
+        opacity: .8;
+    }
    }
  
