--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -92,7 +92,8 @@ $selectbg :rgb(16, 163, 249);
     height: 100%;
     // background:radial-gradient(rgba(0, 0, 0, 0), rgba(67, 217, 223, 0.25), rgba(67, 217, 223, 0.3));
     //   background-color: rgba(28, 227, 241, 0.384);
-      background-color: rgba(0, 0, 0, 0.2);
+    //   background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgba(48, 104, 216, 0.3);
         &::before{
             position: absolute;
             top: 0;
