--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -53,6 +53,7 @@ $selectbg :rgb(16, 163, 249);
 
  .bg_boder_box{
     // z-index: 9998; 
+    overflow: hidden;
        border: solid 1px transparent;
        border-image:linear-gradient(to right,rgba(255, 255, 255, 0),rgba(35, 183, 203, 0.9),rgba(255, 255, 255, 0)) 1 5;
     //   box-shadow: 1px 1px 2px 2px rgba(8, 110, 211, 0.521);
@@ -79,12 +80,12 @@ $selectbg :rgb(16, 163, 249);
        height: 10px;
        content: "";
        border-right: 1px solid #00EAFF;
-       border-bottom: 1px solid #00EAFF;
+       border-bottom: 1px solid rgb(0, 234, 255);
        opacity: .8;
    }
    .bg_boder_inner_box{
     border: solid 1px transparent;
-    border-image:linear-gradient(to bottom,rgba(255, 255, 255, 0),rgba(35, 183, 203, 0.9),rgba(255, 255, 255, 0)) 1 5;
+    border-image:linear-gradient(to bottom,rgba(255, 255, 255, 0),rgb(0, 234, 255),rgba(255, 255, 255, 0)) 1 5;
     position:absolute;
     top:0;
     left:0;
@@ -93,11 +94,12 @@ $selectbg :rgb(16, 163, 249);
     // background:radial-gradient(rgba(0, 0, 0, 0), rgba(67, 217, 223, 0.25), rgba(67, 217, 223, 0.3));
     //   background-color: rgba(28, 227, 241, 0.384);
     //   background-color: rgba(0, 0, 0, 0.2);
-      background-color: rgba(48, 104, 216, 0.3);
+    //   background-color: rgba(48, 104, 216, 0.3);
+   
         &::before{
             position: absolute;
-            top: 0;
-            right: 0;
+            top: -1px;
+            right: -1px;
             width: 10px;
             height: 10px;
             content: "";
@@ -107,8 +109,8 @@ $selectbg :rgb(16, 163, 249);
         }
        &::after{
         position: absolute;
-        bottom: 0;
-        left: 0;
+        bottom: -1px;
+        left: -1px;
         width: 10px;
         height: 10px;
         content: "";
