--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -53,13 +53,14 @@ $selectbg :rgb(16, 163, 249);
 
  .bg_boder_box{
     // z-index: 9998; 
-    overflow: hidden;
+    // overflow: hidden;
        border: solid 1px transparent;
        border-image:linear-gradient(to right,rgba(255, 255, 255, 0),rgba(35, 183, 203, 0.9),rgba(255, 255, 255, 0)) 1 5;
     //   box-shadow: 1px 1px 2px 2px rgba(8, 110, 211, 0.521);
     //    padding: 5px;
     //    padding-top:0; 
        position:relative;
+       background-color: #375EDB;
    }
    .bg_boder_box:before{
       position: absolute;
