--- a/template/income.html
+++ b/template/income.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>收入专题</title>
 </head>
+<!-- <body style="width: 1920px;height: 1080px;"> -->
 <body>
     <div id="app"></div>
 </body>
